update php playbook ready

--- a/code/index.j2
+++ b/code/index.j2
@@ -11,5 +11,9 @@
 <p>Введите фамилию: <input type="text" name="lastname" /></p>
 <input type="submit" value="Отправить">
 </form>
+<br>
+<br>
+<br>
+{{result.stdout}}
 </body>
 </html>
