--- a/code/index.j2
+++ b/code/index.j2
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>METANIT.COM</title>
+<title>Demonstration</title>
 <meta charset="utf-8">
 </head>
 <body>
-<h2>Введи свои данные:</h2>
+<h2>Enter your name:</h2>
 <form action="display.php" method="POST">
-<p>Введите имя: <input type="text" name="firstname" /></p>
-<p>Введите фамилию: <input type="text" name="lastname" /></p>
-<input type="submit" value="Отправить">
+<p>First name: <input type="text" name="firstname" /></p>
+<p>Second name: <input type="text" name="lastname" /></p>
+<input type="submit" value="Send">
 </form>
 <br>
 <br>
